<resources>
    <string name="app_name">5&#8211;3&#8211;1&#8211;Dinner</string>
    <string name="action_settings">How to use 5&#8211;3&#8211;1</string>

    <!-- Layout ID's-->
    <string name="venue_option_1">First Choice</string>
    <string name="venue_option_2">Second Choice</string>
    <string name="venue_option_3">Third Choice</string>
    <string name="venue_option_4">Fourth Choice</string>
    <string name="venue_option_5">Fifth Choice</string>
    <string name="update_venues">Update Choices</string>
    <string name="maps_button">Open in Maps&#8230;</string>
    <string name="start_531">Start 5&#8211;3&#8211;1</string>
    <string name="greeting">Enter Five Venues to Start 5&#8211;3&#8211;1</string>

    <string name="main_activity_button_toast">Please type all options</string>
    <string name="venue_options_toast">Please Make 3 Selections</string>
    <string name="venue_options_button_toast">Hit the button to move on!</string>
    <string name="updated_venues_toast">Please make a selection</string>
    <string name="final_venue_no_map">Please install a maps application</string>
    <string name="move_on">Move On</string>


    <!--how to strings-->
    <string name="how_to_use_531">How to use 5&#8211;3&#8211;1</string>
    <string name="howto5">5</string>
    <string name="howto3">3</string>
    <string name="howto1">1</string>
    <string name="open_maps_how_to">Finally, launch your selection in GoogleMaps to get some food!</string>
    <string name="first_step">Type in 5 places that you would like to eat and select a location near you</string>
    <string name="second_step">Have some one else choose three of your five places they would like to eat</string>
    <string name="third_step">Select the final place as a mutually agreed upon venue </string>


    <string name="banner_ad">Banner Ad</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--widget strings-->
    <string name="appwidget_text1">No Venues</string>
    <string name="appwidget_text2">Quick Pick</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_default_text">TextView</string>

    <!--Random Restaraunts for Widget-->
    <string name="mcdonalds">McDonald\'s</string>
    <string name="jack_box">Jack in the Box</string>
    <string name="taco_bell">Taco Bell</string>
    <string name="subway">Subway</string>
    <string name="burger_king">Burger King</string>
    <string name="applebees">Applebee\'s</string>
    <string name="chilis">Chili\s</string>
    <string name="arbys">Arby\'s</string>





</resources>
