<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.bootycall20.a5_3_1_dinner.MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/how_to_use_531"
            android:text="@string/how_to_use_531"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/editChoice1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:clickable="true"
            android:contentDescription="@string/venue_option_1"
            android:elevation="@dimen/text_view_elevation"
            android:padding="@dimen/text_view_padding"
            android:text="@string/first_step"
            android:textAlignment="center"
            android:textSize="@dimen/text_view_text_size" />

        <TextView
            android:id="@+id/editChoice2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editChoice1"
            android:clickable="true"
            android:contentDescription="@string/venue_option_2"
            android:elevation="@dimen/text_view_elevation"
            android:padding="@dimen/text_view_padding"
            android:text="@string/second_step"
            android:textAlignment="center"
            android:textSize="@dimen/text_view_text_size" />

        <TextView
            android:id="@+id/editChoice3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editChoice2"
            android:clickable="true"
            android:contentDescription="@string/venue_option_3"
            android:elevation="@dimen/text_view_elevation"
            android:padding="@dimen/text_view_padding"
            android:text="@string/third_step"
            android:textAlignment="center"
            android:textSize="@dimen/text_view_text_size" />

        <TextView
            android:id="@+id/editChoice4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editChoice3"
            android:clickable="true"
            android:contentDescription="@string/venue_option_4"
            android:elevation="@dimen/text_view_elevation"
            android:padding="@dimen/text_view_padding"
            android:text="@string/open_maps_how_to"
            android:textAlignment="center"
            android:textSize="@dimen/text_view_text_size" />

        <TextView
            android:id="@+id/howto5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editChoice2"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/editChoice1"
            android:text="@string/howto5"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/howto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editChoice3"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editChoice1"
            android:text="@string/howto3"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/howto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editChoice4"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editChoice2"
            android:text="@string/howto1"
            android:textSize="40sp" />


    </RelativeLayout>
</ScrollView>
