<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/venue_option_1"
        android:elevation="13dp"
        android:hint="@string/venue_option_1"
        android:padding="30dp" />

    <TextView
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/venue_option_2"
        android:hint="@string/venue_option_2"
        android:padding="30dp" />

    <TextView
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/venue_option_3"
        android:hint="@string/venue_option_3"
        android:padding="30dp" />

    <TextView
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/venue_option_4"
        android:hint="@string/venue_option_4"
        android:padding="30dp" />

    <TextView
        android:id="@+id/choice5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/venue_option_5"
        android:hint="@string/venue_option_5"
        android:padding="30dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Update Venues"
        android:onClick="venueOptions5" />
</LinearLayout>